VeraSandBox2016/src/objects/ExpertSearchPopulateFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Search criteria generation filters for pre-fetching selected values for picklist.</description>
    <fields>
        <fullName>Level_1_Criteria_Type__c</fullName>
        <description>Choose Picklist, Constant, Object, it specifies type of value</description>
        <inlineHelpText>Choose Picklist, Constant, Object.</inlineHelpText>
        <label>Level 1 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Criteria__c</fullName>
        <description>Selected value of level 1</description>
        <inlineHelpText>Please enter the criteria for Level 1</inlineHelpText>
        <label>Level 1 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Criteria_Type__c</fullName>
        <label>Level 2 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Criteria__c</fullName>
        <label>Level 2 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Criteria_Type__c</fullName>
        <label>Level 3 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Criteria__c</fullName>
        <label>Level 3 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueType__c</fullName>
        <description>Type of Value</description>
        <label>ValueType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expert Search Populate Filter</label>
</CustomObject>